[gd_scene load_steps=12 format=3 uid="uid://dhbse3oxk3sqy"]

[ext_resource type="Script" uid="uid://c0repceq5kbgc" path="res://scenes/battle_mode/battle_mode.gd" id="1_n0jr3"]
[ext_resource type="Script" uid="uid://c2acfev3wd23j" path="res://objects/spawner/entity_spawner.gd" id="3_m6swq"]
[ext_resource type="PackedScene" uid="uid://df8hmx6ptpglc" path="res://ui/battle_mode/ui_battle_mode.tscn" id="4_ohitg"]
[ext_resource type="Script" uid="uid://b8ut0do6rkkwb" path="res://scripts/components/battle_ai_component.gd" id="4_w2321"]
[ext_resource type="Script" uid="uid://dfnfxuqorc1d1" path="res://scripts/components/battle_setup_component.gd" id="5_1e6t0"]
[ext_resource type="Script" uid="uid://d1hcgl23g2agy" path="res://scripts/components/turn_queue_component.gd" id="5_gdpxd"]
[ext_resource type="Script" uid="uid://d4ldnxegoiohh" path="res://scripts/components/battle_action_component.gd" id="6_rbf2l"]
[ext_resource type="Script" uid="uid://bp5h6g0l45rj3" path="res://scripts/components/battle_end_component.gd" id="6_rs8fh"]
[ext_resource type="Texture2D" uid="uid://bxgqtgf0ejuil" path="res://assets/Buttons/Turned based battlefield (1).png" id="7_ydh4t"]
[ext_resource type="PackedScene" uid="uid://b52hglkky0h71" path="res://ui/battle_mode_multiplier/ui_battle_multiplier.tscn" id="10_856se"]
[ext_resource type="PackedScene" uid="uid://7ujfv5f762dk" path="res://ui/battle_mode_multiplier/battle_multiplier_feedback.tscn" id="11_ydh4t"]

[node name="BattleMode" type="Node2D" node_paths=PackedStringArray("turn_queue_component")]
script = ExtResource("1_n0jr3")
turn_queue_component = NodePath("TurnQueueComponent")

[node name="TurnQueueComponent" type="Node" parent="."]
script = ExtResource("5_gdpxd")
metadata/_custom_type_script = "uid://d1hcgl23g2agy"

[node name="BattleActionComponent" type="Node" parent="." node_paths=PackedStringArray("battle_mode", "ui_battle_multiplier")]
script = ExtResource("6_rbf2l")
battle_mode = NodePath("..")
ui_battle_multiplier = NodePath("../CanvasLayer/UIBattleMultiplier")
metadata/_custom_type_script = "uid://d4ldnxegoiohh"

[node name="BattleAIComponent" type="Node" parent="." node_paths=PackedStringArray("battle_mode")]
script = ExtResource("4_w2321")
battle_mode = NodePath("..")
metadata/_custom_type_script = "uid://b8ut0do6rkkwb"

[node name="BattleSetupComponent" type="Node" parent="."]
script = ExtResource("5_1e6t0")
metadata/_custom_type_script = "uid://dfnfxuqorc1d1"

[node name="BattleEndComponent" type="Node" parent="."]
script = ExtResource("6_rs8fh")
metadata/_custom_type_script = "uid://bp5h6g0l45rj3"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("7_ydh4t")

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(576, 324)
zoom = Vector2(2, 2)

[node name="Players" type="Node" parent="."]
unique_name_in_owner = true

[node name="Player1" type="Marker2D" parent="Players"]
unique_name_in_owner = true
position = Vector2(466, 400)
script = ExtResource("3_m6swq")
metadata/_custom_type_script = "uid://c2acfev3wd23j"

[node name="Player2" type="Marker2D" parent="Players"]
unique_name_in_owner = true
position = Vector2(414, 390)
script = ExtResource("3_m6swq")
metadata/_custom_type_script = "uid://c2acfev3wd23j"

[node name="Player3" type="Marker2D" parent="Players"]
unique_name_in_owner = true
position = Vector2(410, 254)
script = ExtResource("3_m6swq")
metadata/_custom_type_script = "uid://c2acfev3wd23j"

[node name="Enemies" type="Node" parent="."]
unique_name_in_owner = true

[node name="Enemy1" type="Marker2D" parent="Enemies"]
unique_name_in_owner = true
position = Vector2(708, 400)
script = ExtResource("3_m6swq")
metadata/_custom_type_script = "uid://c2acfev3wd23j"

[node name="Enemy2" type="Marker2D" parent="Enemies"]
unique_name_in_owner = true
position = Vector2(775, 343)
script = ExtResource("3_m6swq")
metadata/_custom_type_script = "uid://c2acfev3wd23j"

[node name="Enemy3" type="Marker2D" parent="Enemies"]
unique_name_in_owner = true
position = Vector2(771, 254)
script = ExtResource("3_m6swq")
metadata/_custom_type_script = "uid://c2acfev3wd23j"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UIBattleMode" parent="CanvasLayer" instance=ExtResource("4_ohitg")]
unique_name_in_owner = true

[node name="UIBattleMultiplier" parent="CanvasLayer" node_paths=PackedStringArray("battle_mode", "battle_multiplier_feedback", "ui_battle_mode") instance=ExtResource("10_856se")]
unique_name_in_owner = true
visible = false
battle_mode = NodePath("../..")
battle_multiplier_feedback = NodePath("../BattleMultiplierFeedback")
ui_battle_mode = NodePath("../UIBattleMode")

[node name="BattleMultiplierFeedback" parent="CanvasLayer" instance=ExtResource("11_ydh4t")]
visible = false
